--- a/cli/pipeline.yml
+++ b/cli/pipeline.yml
@@ -1,5 +1,11 @@
 ---
 resource_types:
+# using temp tracker resource until https://github.com/concourse/tracker-resource/issues/17 is fixed
+- name: tracker-resource-fixed
+  type: docker-image
+  source:
+    repository: concourse/tracker-resource
+
 - name: slack-notification
   type: docker-image
   source:
@@ -172,13 +178,13 @@ resources:
     branch: master
     pool: bosh-lites-diego
 
-# disabled until https://github.com/concourse/tracker-resource/issues/17 is fixed
-# - name: cf-cli-tracker
-#   type: tracker
-#   source:
-#     token: {{cf-cli-public-tracker-token}}
-#     project_id: {{cf-cli-public-tracker-project-id}}
-#     tracker_url: https://www.pivotaltracker.com
+# using temp tracker resource until https://github.com/concourse/tracker-resource/issues/17 is fixed
+- name: cf-cli-tracker
+  type: tracker-resource-fixed
+  source:
+    token: {{cf-cli-public-tracker-token}}
+    project_id: {{cf-cli-public-tracker-project-id}}
+    tracker_url: https://www.pivotaltracker.com
 
 - name: golang
   type: docker-image
@@ -571,11 +577,11 @@ jobs:
     - put: edge-windows-installer-64
       params:
         file: winstallers/cf-cli-installer_winx64.zip
-  # disabled until https://github.com/concourse/tracker-resource/issues/17 is fixed
-  # - put: cf-cli-tracker
-  #   params:
-  #     repos:
-  #     - cli
+    # using temp tracker resource until https://github.com/concourse/tracker-resource/issues/17 is fixed
+    - put: cf-cli-tracker
+      params:
+        repos:
+        - cli
 
 - name: create-cli-ci-image
   serial: true
