--- a/ci/infrastructure/hardknox.yml
+++ b/ci/infrastructure/hardknox.yml
@@ -37,6 +37,16 @@ resources:
     uri: git@github.com:cloudfoundry/cli-private
     private_key: {{cli-private-github-private-key-write}}
     branch: master
+    paths:
+    - ci/infrastructure/hardknox/bbl-state.json
+- name: cf-state
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry/cli-private
+    private_key: {{cli-private-github-private-key-write}}
+    branch: master
+    paths:
+    - ci/infrastructure/hardknox/deployment-vars.yml
 
 jobs:
 - name: setup-infrastructure
@@ -84,6 +94,7 @@ jobs:
     - get: state
       passed: [setup-infrastructure]
       trigger: true
+    - get: cf-state
     - get: cf-deployment
     - get: ops-files
     - get: cli-ci
@@ -100,20 +111,20 @@ jobs:
       input1: ops-files
       input2: cli-ci
     params:
-      COPY_PATHS: "input1/operations/tcp-routing-gcp.yml input2/ci/infrastructure/operations/isolation-segments.yml input2/ci/infrastructure/operations/app-memory-override.yml input2/ci/infrastructure/operations/skip-ssl-override.yml"
+      COPY_PATHS: "input1/operations/scale-to-one-az.yml input1/operations/tcp-routing-gcp.yml input1/operations/test/add-persistent-isolation-segment-diego-cell.yml input2/ci/infrastructure/operations/app-memory-override.yml input2/ci/infrastructure/operations/enable-diego-bridge.yml input2/ci/infrastructure/operations/skip-ssl-override.yml"
   - task: deploy-cf
     file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
     input_mapping:
       bbl-state: state
-      vars-store: state
+      vars-store: cf-state
       ops-files: combine_inputs_output
     params:
       SYSTEM_DOMAIN: hardknox.cli.ci.cf-app.com
-      OPS_FILES: "tcp-routing-gcp.yml isolation-segments.yml app-memory-override.yml skip-ssl-override.yml"
+      OPS_FILES: "tcp-routing-gcp.yml enable-diego-bridge.yml add-persistent-isolation-segment-diego-cell.yml app-memory-override.yml skip-ssl-override.yml scale-to-one-az.yml"
       VARS_STORE_FILE: ci/infrastructure/hardknox/deployment-vars.yml
       BBL_STATE_DIR: ci/infrastructure/hardknox
     ensure:
-      put: state
+      put: cf-state
       params:
         repository: updated-vars-store
         rebase: true
